Regression: Artifacts/crash when sculpting with Dyntopo #101502

Closed
opened 2022-09-30 19:47:46 +02:00 by Hector DeAnda · 29 comments

System Information
Operating system: macOS-12.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon HD - FirePro D500 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 23:32, hash: 1c1dc5f844
Worked: (newest version of Blender that worked as expected)

Short description of error
In sculpt mode when selecting Dyntopo a lot of strange artifacts appear, then crash results.

Exact steps for others to reproduce the error

  • Start Blender
  • Select Sculpt Mode -> Select Dyntopo
  • sculpt object and observe unusual artifacts. Continue and crash results.
**System Information** Operating system: macOS-12.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon HD - FirePro [D500](https://archive.blender.org/developer/D500) OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 23:32, hash: `1c1dc5f844` Worked: (newest version of Blender that worked as expected) **Short description of error** In sculpt mode when selecting Dyntopo a lot of strange artifacts appear, then crash results. **Exact steps for others to reproduce the error** - Start Blender - Select Sculpt Mode -> Select Dyntopo - sculpt object and observe unusual artifacts. Continue and crash results.
Author

Added subscriber: @HectorDeAnda

Added subscriber: @HectorDeAnda

#101643 was marked as duplicate of this issue

#101643 was marked as duplicate of this issue

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Yeah, I can confirm the artifacts and sometimes a crash... (Windows here)
blender_2022-09-30_18-51-33.mp4

Yeah, I can confirm the artifacts and sometimes a crash... (Windows here) [blender_2022-09-30_18-51-33.mp4](https://archive.blender.org/developer/F13598896/blender_2022-09-30_18-51-33.mp4)
Author

Screen Shot 2022-09-30 at 10.58.42 AM.png

![Screen Shot 2022-09-30 at 10.58.42 AM.png](https://archive.blender.org/developer/F13598898/Screen_Shot_2022-09-30_at_10.58.42_AM.png)
Pratik Borhade changed title from Mac OS Sculpt Mode, Dyntopo Crash to Regression: Artifacts/crash when sculpting with Dyntopo 2022-10-01 06:14:56 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm too. Will check

Thanks for the report. I can confirm too. Will check
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Unable to bisect because of #101478 (Regression: Crash when Sculpt Mode is selected.)
I think either of 65900d88a8, 039429faeb introduced the issue.
cc @JosephEagar

Unable to bisect because of #101478 (Regression: Crash when Sculpt Mode is selected.) I think either of 65900d88a831, 039429faeb41 introduced the issue. cc @JosephEagar

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Same here on bot Linux and Windows. Latest master e5ccbfab09

Same here on bot Linux and Windows. Latest master e5ccbfab09ff
Member

This should be fixed, can someone confirm?

This should be fixed, can someone confirm?
Author

Not fixed with latest build.

Screen Shot 2022-10-03 at 1.54.19 PM.png

Not fixed with latest build. ![Screen Shot 2022-10-03 at 1.54.19 PM.png](https://archive.blender.org/developer/F13611288/Screen_Shot_2022-10-03_at_1.54.19_PM.png)

Yes, still happening...
blender-3.4.0-alpha+master.d4d40f3b69d8-windows.amd64-release

Yes, still happening... blender-3.4.0-alpha+master.d4d40f3b69d8-windows.amd64-release
Member

Can still redo in current master: 22c3db72ca2f3d92852f463c184381ccf2998230

Can still redo in current master: `22c3db72ca2f3d92852f463c184381ccf2998230`

Added subscriber: @Tanza

Added subscriber: @Tanza
Author

Todays build d42f882343 results in same artifacts.

Screen Shot 2022-10-04 at 6.00.13 AM.png

Todays build d42f882343c7 results in same artifacts. ![Screen Shot 2022-10-04 at 6.00.13 AM.png](https://archive.blender.org/developer/F13613720/Screen_Shot_2022-10-04_at_6.00.13_AM.png)

Still occurs on today's build f9a10e7ed039
image.png

Still occurs on today's build `f9a10e7ed039` ![image.png](https://archive.blender.org/developer/F13617497/image.png)

Added subscriber: @JulianPerez

Added subscriber: @JulianPerez
Author

Latest build 51bd26d0fa has same result. Mac Intel.

Latest build 51bd26d0faad has same result. Mac Intel.
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

@HectorDeAnda No need for daily reminders. This bug is marked as confirmed and high priority and will get fixed asap.

@HectorDeAnda No need for daily reminders. This bug is marked as confirmed and high priority and will get fixed asap.
Member

Added subscribers: @PMA33, @lichtwerk

Added subscribers: @PMA33, @lichtwerk

This issue was referenced by dfa0eb298e

This issue was referenced by dfa0eb298ed3fa08cc70a472eb9427b515040457
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-10-06 23:04:50 +02:00
Member

I think I've fixed it, please test.

I think I've fixed it, please test.
Member

@JosephEagar , now crash is triggered when I attempt to sculpt with dyntopo (so far I've verified in lite build only: 47d3e765679e54c09ecc4ded812e89483a1e1d9b)

But not frequently crash occurs. Will find reliable way to redo it.
And yes, your commit indeed fixes the issue :)

@JosephEagar , now crash is triggered when I attempt to sculpt with dyntopo (so far I've verified in lite build only: `47d3e765679e54c09ecc4ded812e89483a1e1d9b`) But not frequently crash occurs. Will find reliable way to redo it. And yes, your commit indeed fixes the issue :)

The garbled display is indeed fixed. I also was able to sculpt some strokes in one scene until Blender closed.
Then I gave it another try with an empty scene, a simple grid and it closed / crashed upon activating Dyntopo.
Linux / full build / latest master

The garbled display is indeed fixed. I also was able to sculpt some strokes in one scene until Blender closed. Then I gave it another try with an empty scene, a simple grid and it closed / crashed upon activating Dyntopo. Linux / full build / latest master
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101502
No description provided.