Sculpt: Fix T101502: GPU tris miscounted for dyntopo

Dyntopo PBVH draw was miscounting the number of triangles.